# SpacetimeDB

./: .gitignore  CLAUDE.md  bsatn_reader.cpp  bsatn_reader.h  bsatn_writer.cpp  bsatn_writer.h  main.cpp  module_def_builder.cpp  preprocessor_output.txt  spacetime_host_abi.h  spacetime_macros.h  spacetime_module_abi.cpp  spacetime_module_abi.h  spacetime_module_def.h  spacetime_reducer_bridge.cpp  spacetime_schema.h  spacetime_sdk_runtime.cpp  spacetime_sdk_runtime.h  spacetime_test_types.h  uint128_placeholder.h
bindings-cpp/examples/module_library_test_cpp/: CMakeLists.txt  README.md  build.sh  test_module_library.sh
bindings-cpp/examples/module_library_test_cpp/src/: advanced_query_test.cpp  basic_index_test.cpp  integration_test.cpp  module_library_test.cpp  module_library_test_minimal.cpp  module_library_test_simple.cpp  reducer_clean_ctx.cpp  reducer_error_handling.cpp  schema_management_test.cpp  verified_primitives_test.cpp  working_struct_test.cpp
cpp_sdk/examples/module_test/: CMakeLists.txt  MODULE_DESCRIPTION_ANALYSIS.md  build.sh  debug_module_desc.cpp  minimal_module_test_schema.json  module_test_simple.cpp  test_debug_string.cpp  test_gradual.cpp  test_minimal.cpp  test_single_field.cpp
cpp_sdk/examples/module_test/src/: comprehensive_module_test.cpp  minimal_module_test.cpp  module_test.cpp
cpp_sdk/examples/simple_module/: CMakeLists.txt  SDK_ISSUES_AND_GAPS.md  SDK_TEST_REPORT.md  SDK_VALIDATION_CHECKLIST.md  advanced_features_demo.cpp  build_constraint_example.sh  build_simple.sh  build_versioning_examples.sh  builtin_reducers_example.cpp  comprehensive_integration_test.cpp  constraint_validation_example.cpp  field_rename_example.cpp  minimal_module.cpp  minimal_sdk.h  scheduled_example.cpp  simple_module.cpp  simple_no_strings.cpp  simple_table.cpp  test_args.cpp  test_autogen.cpp  test_autogen_final.cpp  test_autogen_simple.cpp  test_builtin_reducers.cpp  test_credentials.cpp  test_encoding.cpp  test_iter_ops.cpp  test_manual_enhanced.cpp  test_schedule_types.cpp  test_scheduled_build.sh  test_table_ops.cpp  test_transactions.cpp  transaction_example.cpp  version_compatibility_example.cpp  working_module.cpp
cpp_sdk/sdk/: BSATN_FINAL_STATUS.md  BSATN_IMPROVEMENTS.md  BSATN_REFACTORING_SUMMARY.md  CMakeLists.txt
cpp_sdk/sdk/include/spacetimedb/: algebraic_type.h  algebraic_type_wrapper.h  bsatn_all.h  builtin_reducers.h  constraint_validation.h  credentials.h  field_registration.h  macros.h  migration.h  module.h  module_bindings_generator.h  reducer_args.h  rls.h  schedule_reducer.h  spacetimedb.h  spacetimedb_advanced.h  spacetimedb_autogen.h  spacetimedb_core.h  spacetimedb_easy.h  spacetimedb_refactored.h  spacetimedb_sdk.h  table_ops.h  time_duration.h  timestamp.h  types.h
cpp_sdk/sdk/include/spacetimedb/abi/: abi_utils.h  common_defs.h  spacetime_module_exports.h  spacetimedb_abi.h
cpp_sdk/sdk/include/spacetimedb/bsatn/: algebraic_type.h  bsatn.h  bsatn_compat.h  reader.h  size_calculator.h  special_types.h  sum_type.h  traits.h  type_registry.h  visitor.h  writer.h
cpp_sdk/sdk/include/spacetimedb/internal/: FFI.h  IReducer.h  ITable.h  MIGRATION_GUIDE.md  Module.h  README.md  module_def.h  module_schema.h  raw_module_def_v9.h
cpp_sdk/sdk/include/spacetimedb/internal/autogen/: AlgebraicType.g.h  IndexType.g.h  Lifecycle.g.h  MiscModuleExport.g.h  ProductType.g.h  ProductTypeElement.g.h  RawColumnDefV8.g.h  RawConstraintDataV9.g.h  RawConstraintDefV8.g.h  RawConstraintDefV9.g.h  RawIndexAlgorithm.g.h  RawIndexDefV8.g.h  RawIndexDefV9.g.h  RawMiscModuleExportV9.g.h  RawModuleDef.g.h  RawModuleDefV8.g.h  RawModuleDefV9.g.h  RawReducerDefV9.g.h  RawRowLevelSecurityDefV9.g.h  RawScheduleDefV9.g.h  RawScopedTypeNameV9.g.h  RawSequenceDefV8.g.h  RawSequenceDefV9.g.h  RawTableDefV8.g.h  RawTypeDefV9.g.h  (+10 more)
cpp_sdk/sdk/include/spacetimedb/sdk/: database.h  exceptions.h  index_management.h  logging.h  query_operations.h  reducer_context.h  reducer_context_enhanced.h  schema_management.h  spacetimedb_sdk_reducer.h  spacetimedb_sdk_types.h  table.h
cpp_sdk/sdk/src/: constraint_validation.cpp  credentials.cpp  field_registration.cpp  logging.cpp  module_def_builder.cpp  raw_module_def_v9.cpp  spacetime_module_abi.cpp  spacetime_reducer_bridge.cpp  spacetimedb_sdk_types.cpp  spacetimedb_sdk_types_impl.cpp  transaction.cpp  versioning.cpp  wasi_shims.cpp
cpp_sdk/sdk/src/abi/: module_exports.cpp  reducer_bridge.cpp
cpp_sdk/sdk/src/bsatn/: reader.cpp  writer.cpp
cpp_sdk/sdk/src/internal/: FFI.cpp  Module.cpp
cpp_sdk/sdk/src/sdk/: exceptions.cpp  index_management.cpp  logging.cpp
cpp_sdk/sdk/test/: CMakeLists.txt  README.md  test_bsatn.cpp  test_bsatn_complete.cpp  test_bsatn_existing.cpp  test_bsatn_refactored.cpp
examples/cpp_counter_module/: CMakeLists.txt  counter_module.cpp
modules/sdk-test-connect-disconnect-cpp/: CMakeLists.txt
modules/sdk-test-connect-disconnect-cpp/src/: lib.cpp
modules/sdk-test-cpp/: C++_TYPE_HANDLING_WORKAROUND.md  CMakeLists.txt  MACRO_TEST_RESULTS.md  README.md  WORKING_MODULE_PATTERN.md  build.sh  build_basic.sh  build_minimal.sh  build_module.sh  build_refactored.sh  build_simple.sh  build_super_minimal.sh  build_working.sh
modules/sdk-test-cpp/src/: basic_test.cpp  btree_index_test.cpp  btree_minimal_test.cpp  constraint_test.cpp  lib.cpp  lib_abi_only.cpp  lib_complete.cpp  lib_empty_with_library.cpp  lib_final.cpp  lib_fixed_direct.cpp  lib_fixed_working.cpp  lib_hybrid.cpp  lib_macro_module.cpp  lib_minimal.cpp  lib_simple_table.cpp  lib_simple_table_test.cpp  lib_standalone_working.cpp  lib_truly_empty.cpp  lib_truly_standalone.cpp  lib_using_library.cpp  lib_with_macros.cpp  lib_with_table.cpp  lib_working_hybrid.cpp  manual_types_test.cpp  minimal_manual.cpp  minimal_sdk_test.cpp  minimal_test.cpp  refactored_test.cpp  simple_constraint_test.cpp  simple_test.cpp  simple_transaction_test.cpp  spacetimedb_minimal.h  super_minimal.cpp  test_module_simple.cpp  test_module_step1.cpp  test_module_step1_simple.cpp  test_simple_no_macros.cpp  test_table_macro.cpp  transaction_test.cpp  working_module.cpp
(+261 files in other folders)
